Localization: Fix typo in de.strings

--- a/locales/de.strings
+++ b/locales/de.strings
@@ -45,7 +45,7 @@
 "no_information_provided" = "Keine Informationen angegeben.";
 "deceased_person" = "Gestorbene Person";
 
-"relationship" = Beziehung";
+"relationship" = "Beziehung";
 
 "relationship_0" = "Nicht ausgewählt";
 "relationship_1" = "Nicht verheiratet";
