--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -43,6 +43,7 @@
 "status" = "Статус";
 "no_information_provided" = "Информация отсутствует.";
 "deceased_person" = "Страница покойного человека";
+"years" = "лет";
 
 "relationship" = "Семейное положение";
 
